tests/filled-param/invalid-specified-as-filled.stderr
error[E0277]: the trait bound `SevenMod8: TotalSizeIsMultipleOfEightBits` is not satisfied
  --> tests/filled-param/invalid-specified-as-filled.rs:5:1
   |
5  | / pub struct UnfilledBitfield {
6  | |     a: B7,
7  | |     b: u8,
8  | | }
   | |_^ the trait `TotalSizeIsMultipleOfEightBits` is not implemented for `SevenMod8`
   |
   = help: the trait `TotalSizeIsMultipleOfEightBits` is implemented for `ZeroMod8`
note: required by a bound in `CheckTotalSizeMultipleOf8`
  --> src/private/checks.rs
   |
   |     <Self::Size as RenameSizeType>::CheckType: TotalSizeIsMultipleOfEightBits,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeMultipleOf8`
